enable web-bundler for styles, downgrade to jdk21